SOnar warning fix